--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
 }
 
+h1,
 span,
 p {
   margin: 0;
@@ -28,7 +29,7 @@ body {
   gap: 2rem;
   align-items: center;
   text-align: center;
-  padding: 1.5rem;
+  padding: 2rem;
   padding-bottom: 0;
 }
 
@@ -51,8 +52,14 @@ body {
   gap: 2rem;
 }
 
-p {
-  font-size: 16px;
+#text-container {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+#soon {
+  display: inline-flex;
 }
 
 #db-img {
@@ -111,11 +118,13 @@ p {
 }
 
 h1 {
+  color: #969696;
   font-weight: 300;
+  font-size: 50%;
 }
 
 .soon-text {
-  font-size: 2rem;
+  font-size: 100%;
   letter-spacing: 0.13rem;
 }
 
@@ -153,7 +162,7 @@ p {
 
 #links {
   display: flex;
-  width: 40%;
+  width: 30%;
   justify-content: space-between;
   align-items: center;
 }
@@ -167,7 +176,7 @@ footer {
   position: fixed;
   display: flex;
   width: 100%;
-  bottom: 1em;
+  bottom: 3em;
   margin-top: auto;
   align-items: center;
   justify-content: center;
@@ -175,13 +184,18 @@ footer {
 }
 
 footer p {
+  font-size: 12px;
   color: #969696;
 }
 
-@media only screen and (min-width: 481px) {
+@media only screen and (min-width: 725px) {
   #container {
     width: 50%;
     margin: 0 auto;
+  }
+
+  .soon-text {
+    font-size: 100%;
   }
 
   #logo-img {
@@ -229,16 +243,25 @@ footer p {
 
 @media only screen and (min-width: 1024px) {
   #container {
-    width: 40%;
+    width: 45%;
     margin: 0 auto;
   }
 
+  .soon-text {
+    font-size: 150%;
+  }
+
   #logo-img {
-    width: 15%;
+    width: 10%;
     margin-top: 5%;
   }
 
   #links {
     width: 10%;
+  }
+
+  #links a img {
+    width: 15px;
+    height: 15px;
   }
 }
